data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4304.wast
;; 3. **Empty Table Handling**:    Use a `call_indirect` for a table that has no entries and assert that the correct trap occurs. This checks proper handling of the empty table condition by ensuring the implementation recognizes the absence of valid functions.      **Constraint**: Ensure robustness with empty table structures.

(assert_invalid
  (module
    (table 0 funcref)
    (type (func (param i32) (result i32)))
    (func (param i32) (result i32)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "table index out of bounds"
)